--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -151,6 +151,7 @@
   - collaboration: Collaboration
   - collaborators: Collaborator
   - confirm_group_delete: Are you sure you want to delete this group?  Your subgroups and data points will be lost.
+  - confirm_point_delete: Are you sure you want to delete this data point?
   - confirm_remove_all_data: Are you sure you want to remove all data from %s?
   - confirm_template_delete: Are you sure you want to delete this template?
   - contact_documentcloud: Contact DocumentCloud
