Added group extension

--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -300,6 +300,7 @@
   - export_to_overview_explain: You are about to export to Overview. You must create
       an Overview account, and you must provide Overview with your DocumentCloud username
       and password.
+  - extension: Extension
   - featured_examples_list: You can find plenty of examples of embedded documents
       on our list of %sfeatured reporting%s.
   - featured_reporting_list: You can find examples of embedded searches on our list
