--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -153,6 +153,7 @@
   - collaborators: Collaborator
   - confirm_drop_claim: Are you sure you want to drop this document?  You will lose all of your work.
   - confirm_group_delete: Are you sure you want to delete this group?  Your subgroups and data points will be lost.
+  - confirm_mark_complete: Are you sure you want to mark your work as complete?
   - confirm_point_delete: Are you sure you want to delete this data point?
   - confirm_remove_all_data: Are you sure you want to remove all data from %s?
   - confirm_template_delete: Are you sure you want to delete this template?
