--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -155,6 +155,7 @@
   - collaboration: Collaboration
   - collaborators: Collaborator
   - complete_qc: Mark Quality Control Complete
+  - complete_qa: Mark Quality Assurance Complete
   - confirm_drop_claim: Are you sure you want to drop this document?  You will lose all of your work.
   - confirm_group_delete: Are you sure you want to delete this group?  Your subgroups and data points will be lost.
   - confirm_mark_complete: Are you sure you want to mark your work as complete?
@@ -577,6 +578,7 @@
   - resend_welcome_email: Resend Welcome Email
   - restricted: Restricted
   - review_de_instruct: Please review the Data Entry work for each user.
+  - review_qc_instruct: Please review the Quality Control work.
   - review_x_documents:
     - Review "%2$s" on DocumentCloud
     - Review %d documents on DocumentCloud
