--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -311,7 +311,7 @@
   - explain_disable_account: "%1$s will not be able to log in to DocumentCloud. Public
       documents and annotations provided by %1$s will remain available. %2$sContact
       support%3$s to completely purge %1$s's account."
-  - explain_rating_error: Please leave a note to explain any rating lower than 'Very Good'.
+  - explain_rating_error: Please leave a note to explain any rating lower than 'Normal'.
   - export: Export
   - export_to_overview_explain: You are about to export to Overview. You must create
       an Overview account, and you must provide Overview with your DocumentCloud username
