--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -232,7 +232,7 @@
   - draft_note_visible: This draft is only visible to you and collaborators.
   - duplicate_point_error: A point by this name already exists here.  Overwrite?
   - duplicate_titles: "Two points have the same title (\'%1$s\').  Please modify the points to have unique titles."
-  - duplicate_titles_fail: A point with this title already exists in this group.
+  - duplicate_titles_fail: Two or more points share a title with an already approved point in this group.  These points were not approved. <br>%1$s
   - edit: Edit
   - edit_access: Edit Access Level
   - edit_data: Edit Data
