View-Only view, role, and URL login support

--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -697,6 +697,7 @@
   - uploading_documents: Uploading Documents
   - uservoice_discuss: Discuss Features &amp; Bugs
   - view_entities: View Entities
+  - view_only: View Only
   - view_pages: View Pages
   - view_timeline: View Timeline
   - welcome_message_sent_to: A welcome message has been sent to %s.
