--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -162,6 +162,7 @@
   - confirm_mark_complete: Are you sure you want to mark your work as complete?
   - confirm_point_delete: Are you sure you want to delete this data point?
   - confirm_remove_all_data: Are you sure you want to remove all data from %s?
+  - confirm_repo_delete: Are you sure you want to delete this repository?
   - confirm_template_delete: Are you sure you want to delete this template?
   - contact_documentcloud: Contact DocumentCloud
   - contact_reviewer: Contact %s at %s if you need any help, or visit %s for more
@@ -255,6 +256,7 @@
       the original PDF.'
   - edit_published_url: Edit Published URL
   - edit_related_url: Edit Related Article URL
+  - edit_repo: Edit Repository
   - edit_sections: Edit Sections
   - edit_source: Edit Source
   - edit_subtemplate: Edit Subtemplate
@@ -404,6 +406,7 @@
   - new_account: New Account
   - new_documents: New Documents
   - new_project: New Project
+  - new_repo: New Repo
   - new_subtemplate: New Subtemplate
   - new_template: New Template
   - next: Next
@@ -580,6 +583,9 @@
       document.
   - replace_multiple_pages: Replace pages between %d and %d
   - replace_page_x: Replace page %d
+  - repo_name: Repository Name
+  - repo_name_required:  The Repository Name is required.
+  - repos: Repos
   - reprocess: Reprocess
   - reprocess_text: Reprocess Text
   - request_supp_work: Request Supplemental Work
